Add SVN provider for downloading dependencies
Git wont allow you to download only one directory from github,
(actually there is a way - with sparse download, but it is complicated),
but svn provides quite simple and user friendly way of downloading directory
from github

--- a/resources/lxc_container/meta.yaml
+++ b/resources/lxc_container/meta.yaml
@@ -21,3 +21,8 @@ input:
     container_name:
       schema: str!
       value:
+    roles:
+      schema: [{value: str}]
+      value:
+        - https://github.com/stackforge/os-ansible-deployment/trunk/playbooks/roles/lxc_container_create
+        - https://github.com/stackforge/os-ansible-deployment/trunk/playbooks/roles/lxc_container_destroy
