Fix missing collation and encoding for mariadb_db
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/mariadb_db/actions/remove.yml
+++ b/resources/mariadb_db/actions/remove.yml
@@ -9,3 +9,5 @@
         login_password: {{login_password}}
         login_port: {{login_port}}
         login_host: {{db_host}}
+        collation: {{collation}}
+        encoding: {{encoding}}
