Add missing port parameter for nova puppet
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/nova_puppet/meta.yaml
+++ b/resources/nova_puppet/meta.yaml
@@ -225,6 +225,10 @@ input:
       schema: str!
       value:
 
+    port:
+      schema: int!
+      value: 8774
+
     git:
       schema: {repository: str!, branch: str!}
       value: {repository: 'https://github.com/openstack/puppet-nova', branch: '5.1.0'}
