Fix cinder puppet module references
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/cinder_api_puppet/meta.yaml
+++ b/resources/cinder_api_puppet/meta.yaml
@@ -1,6 +1,6 @@
 id: cinder_api_puppet
 handler: puppet
-puppet_module: cinder_api
+puppet_module: cinder
 version: 1.0.0
 input:
     keystone_password:
