--- a/resources/cinder_scheduler_puppet/meta.yaml
+++ b/resources/cinder_scheduler_puppet/meta.yaml
@@ -1,6 +1,6 @@
 id: cinder_scheduler_puppet
 handler: puppet
-puppet_module: cinder_scheduler
+puppet_module: cinder
 version: 1.0.0
 input:
     scheduler_driver:
