--- a/resources/nova_api_puppet/meta.yaml
+++ b/resources/nova_api_puppet/meta.yaml
@@ -33,6 +33,9 @@ input:
     admin_user:
       schema: str
       value: 'nova'
+    admin_password:
+      schema: str
+      value: 'nova'
     api_bind_address:
       schema: str
       value: '0.0.0.0'
