Fix schema and db-sync condition
Db sync should always be run once we
decoupled nova api from nova, unless we
have a proper notification system

Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/nova_api_puppet/meta.yaml
+++ b/resources/nova_api_puppet/meta.yaml
@@ -52,8 +52,8 @@ input:
       schema: str
       value: 'nova.volume.cinder.API'
     use_forwarded_for:
-      schema: str
-      value: ''
+      schema: bool
+      value: false
     osapi_compute_workers:
       schema: int
       value: 1
