Add compute node2
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/templates/nodes.yml
+++ b/templates/nodes.yml
@@ -6,3 +6,12 @@ resources:
       ip: '10.0.0.3'
       ssh_key: '/vagrant/.vagrant/machines/solar-dev1/virtualbox/private_key'
       ssh_user: 'vagrant'
+
+id: compute_service
+resources:
+  - id: node2
+    from: resources/ro_node
+    values:
+      ip: '10.0.0.4'
+      ssh_key: '/vagrant/.vagrant/machines/solar-dev2/virtualbox/private_key'
+      ssh_user: 'vagrant'
