Fix glance api servers for nova compute
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/nova_puppet/meta.yaml
+++ b/resources/nova_puppet/meta.yaml
@@ -222,6 +222,13 @@ input:
       schema: str!
       value:
 
+    glance_api_servers_port:
+      schema: int
+      value: 9292
+    glance_api_servers_host:
+      schema: 'str'
+      value: 'localhost'
+
     port:
       schema: int!
       value: 8774
