--- a/resources/cinder_volume_puppet/meta.yaml
+++ b/resources/cinder_volume_puppet/meta.yaml
@@ -6,6 +6,22 @@ input:
     package_ensure:
       schema: str
       value: 'present'
+    iscsi_ip_address:
+      schema: str
+      value: '127.0.0.1'
+    volume_driver:
+      schema: str
+      value: 'cinder.volume.drivers.lvm.LVMISCSIDriver'
+    volume_group:
+      schema: str
+      value: 'cinder-volumes'
+    iscsi_helper:
+      schema: str
+      value: 'tgtadm'
+
+    use_iscsi_backend:
+      schema: bool
+      value: true
 
     git:
       schema: {repository: str!, branch: str!}
