--- a/resources/lxc_host/actions/run.yml
+++ b/resources/lxc_host/actions/run.yml
@@ -2,3 +2,5 @@
   sudo: yes
   roles:
     - { role: "lxc_hosts", tags: [ "lxc-host", "host-setup" ] }
+  post_tasks:
+    - shell: pip install git+https://github.com/lxc/python2-lxc.git#egg=lxc
