--- a/resources/lxc_host/meta.yaml
+++ b/resources/lxc_host/meta.yaml
@@ -12,6 +12,9 @@ input:
     ssh_user:
       schema: str!
       value:
+    provides:
+       schema: str
+       value: infra
     roles:
       schema: [{value: str}]
       value:
