Create multiple containers and add rabbitmq resource on idx=28

--- a/resources/lxc_container/meta.yaml
+++ b/resources/lxc_container/meta.yaml
@@ -15,6 +15,15 @@ input:
     ansible_ssh_host:
       schema: str!
       value:
+    user:
+      schema: str!
+      value:
+    user_key:
+      schema: str!
+      value:
+    mgmt_ip:
+      schema: str!
+      value:
     physical_host:
       schema: str!
       value:
