--- a/resources/ssh_key/actions/run.yml
+++ b/resources/ssh_key/actions/run.yml
@@ -4,9 +4,9 @@
   # this is default variables, they will be overwritten by resource one
   vars:
     path: /vagrant/.ssh/id_rsa
-    passphrase: containers
+    passphrase: ''
   tasks:
     - stat: path={{path}}
       register: key
-    - shell: ssh-keygen -t rsa -f {{path}} -N {{passphrase}}
+    - shell: ssh-keygen -t rsa -f {{path}} -N ""
       when: key.stat.exists == False
