--- a/resources/neutron_server_puppet/meta.yaml
+++ b/resources/neutron_server_puppet/meta.yaml
@@ -147,5 +147,5 @@ input:
     value: {repository: 'https://github.com/openstack/puppet-neutron', branch: '5.1.0'}
 
 puppet_module: 'neutron'
-tags: []
+tags: [resource/neutron, resource/neutron_service, resource/neutron_server, resource/neutron_api]
 version: 1.0.0
