--- a/resources/cinder_puppet/meta.yaml
+++ b/resources/cinder_puppet/meta.yaml
@@ -14,7 +14,7 @@ input:
       value: 1
     database_max_pool_size:
       schema: str
-      value: ''
+      value:
     database_max_retries:
       schema: int
       value: 10
@@ -23,7 +23,7 @@ input:
       value: 10
     database_max_overflow:
       schema: str
-      value: ''
+      value:
     rpc_backend:
       schema: str
       value: 'cinder.openstack.common.rpc.impl_kombu'
@@ -53,13 +53,13 @@ input:
       value: false
     kombu_ssl_ca_certs:
       schema: str
-      value: ''
+      value:
     kombu_ssl_certfile:
       schema: str
-      value: ''
+      value:
     kombu_ssl_keyfile:
       schema: str
-      value: ''
+      value:
     kombu_ssl_version:
       schema: str
       value: 'TLSv1'
@@ -149,13 +149,13 @@ input:
       value: false
     mysql_module:
       schema: str
-      value: ''
+      value:
     sql_connection:
       schema: str
-      value: ''
+      value:
     sql_idle_timeout:
       schema: str
-      value: ''
+      value:
 
     db_user:
       schema: str!
@@ -180,19 +180,19 @@ input:
 
     keystone_host:
       schema: str!
-      value: ''
+      value:
     keystone_port:
       schema: int!
-      value: ''
+      value:
     keystone_user:
       schema: str!
-      value: ''
+      value:
     keystone_password:
       schema: str!
-      value: ''
+      value:
     keystone_tenant:
       schema: str!
-      value: ''
+      value:
 
 #    forge:
 #      schema: str!
