--- a/resources/glance_registry_puppet/meta.yaml
+++ b/resources/glance_registry_puppet/meta.yaml
@@ -41,10 +41,10 @@ input:
       value: 35357
     auth_admin_prefix:
       schema: str
-      value: ''
+      value:
     auth_uri:
       schema: str
-      value: ''
+      value:
     auth_protocol:
       schema: str
       value: 'http'
@@ -68,25 +68,25 @@ input:
       value: false
     cert_file:
       schema: str
-      value: ''
+      value:
     key_file:
       schema: str
-      value: ''
+      value:
     ca_file:
       schema: str
-      value: ''
+      value:
     sync_db:
       schema: bool
       value: true
     mysql_module:
       schema: str
-      value: ''
+      value:
     sql_idle_timeout:
       schema: str
-      value: ''
+      value:
     sql_connection:
       schema: str
-      value: ''
+      value:
 
     git:
       schema: {repository: str!, branch: str!}
@@ -117,12 +117,12 @@ input:
 
     keystone_host:
       schema: str!
-      value: ''
+      value:
     keystone_port:
       schema: int!
-      value: ''
+      value:
     keystone_password:
       schema: str!
-      value: ''
+      value:
 
 tags: [resource/glance_registry_service, resources/glance_registry, resource/glance]
