Fix undef default
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/cinder_glance_puppet/meta.yaml
+++ b/resources/cinder_glance_puppet/meta.yaml
@@ -17,7 +17,7 @@ input:
       value: false
     glance_request_timeout:
       schema: str
-      value: ''
+      value:
 
     git:
       schema: {repository: str!, branch: str!}
