--- a/resources/node_network_puppet/meta.yaml
+++ b/resources/node_network_puppet/meta.yaml
@@ -51,7 +51,7 @@ input:
 
     git:
       schema: {repository: str!, branch: str!}
-      value: {repository: 'https://github.com/xenolog/l23network', branch: 'master'}
+      value: {repository: 'https://github.com/xenolog/l23network', branch: '50098cfa1f0f8e8d58e6a6b77a22f1380aa5c426'}
 
     ip:
       schema: str!
