--- a/resources/riak_node/actions/commit.yml
+++ b/resources/riak_node/actions/commit.yml
@@ -1,6 +1,6 @@
 - hosts: [{{ip}}]
   sudo: yes
   tasks:
-    - shell: sleep 30
+    # - shell: sleep 30
     - shell: riak-admin cluster plan
     - shell: riak-admin cluster commit
