--- a/resources/haproxy_config/templates/haproxy.cfg
+++ b/resources/haproxy_config/templates/haproxy.cfg
@@ -2,13 +2,13 @@ global
   log 127.0.0.1 local0
   log 127.0.0.1 local1 notice
   maxconn 4096
-  tune.ssl.default-dh-param 2048
+#  tune.ssl.default-dh-param 2048
   pidfile /var/run/haproxy.pid
   user haproxy
   group haproxy
   daemon
   stats socket /var/run/haproxy.stats level admin
-  ssl-default-bind-options no-sslv3
+#  ssl-default-bind-options no-sslv3 # ubuntu 14.04 have too old haproxy
 
 defaults
   log global
@@ -30,6 +30,7 @@ defaults
 
 {% for service in haproxy_services %}
 listen {{ service['name'] }} 0.0.0.0:{{ service['listen_port'] }}
+{% if service['protocol'] == 'http' %}
     mode http
     stats enable
     stats uri /haproxy?stats
@@ -42,5 +43,17 @@ listen {{ service['name'] }} 0.0.0.0:{{ service['listen_port'] }}
     {% for server in service['servers'] %}
     server {{ server['name'] }} {{ server['ip'] }}:{{ server['port'] }} check
     {% endfor %}
+{% elif service['protocol'] == 'tcp' %}
+# tcp there
+    mode tcp
+    mode tcp
+    option tcpka
+    option srvtcpka
+    balance leastconn
+    {% for server in service['servers'] %}
+    server {{ server['name'] }} {{ server['ip'] }}:{{ server['port'] }} check
+    {% endfor %}
+{% endif %}
+
 
 {% endfor %}
