--- a/resources/riak_node/actions/run.yml
+++ b/resources/riak_node/actions/run.yml
@@ -1,25 +1,24 @@
 - hosts: [{{ip}}]
   sudo: yes
   tasks:
+    # those below are mostly for tests
+    - shell: killall -u riak
+      ignore_errors: yes
+    # remove above when non tests
     - shell: curl -s https://packagecloud.io/install/repositories/basho/riak/script.deb.sh | sudo bash
     - apt:
         name: riak
         state: present
-    # - shell: sed -ie "s/127.0.0.1/{{ip}}/g" /etc/riak/riak.conf
     - service:
         name: riak
         state: stopped
-    - replace:
+    - file: path=/etc/riak/riak.conf state=touch
+    - template:
+        src: {{ resource_dir }}/templates/riak.conf
         dest: /etc/riak/riak.conf
-        regexp: '127.0.0.1'
-        replace: '0.0.0.0'
-    - replace:
-        dest: /etc/riak/riak.conf
-        regexp: '^nodename = .*\n'
-        replace: 'nodename = {{riak_name}}\n\n'
-        # TODO: should use name/hostname instead of ip
     - shell: rm -fr /var/lib/riak/kv_vnode/*
     - shell: rm -fr /var/lib/riak/ring/*
+  
     - service:
         name: riak
         state: reloaded
