Add tags for rabbitmq_user resource
Set default to the 'management'

Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/rabbitmq_user/meta.yaml
+++ b/resources/rabbitmq_user/meta.yaml
@@ -11,6 +11,9 @@ input:
     vhost_name:
       schema: str!
       value:
+    tags:
+      schema: str
+      value: 'management'
     ip:
       schema: str!
       value:
