--- a/resources/rabbitmq_user/actions/run.yml
+++ b/resources/rabbitmq_user/actions/run.yml
@@ -7,4 +7,5 @@
                          configure_priv=.*
                          read_priv=.*
                          write_priv=.*
+                         tags={{tags}}
                          state=present
