--- a/resources/nova_neutron_puppet/meta.yaml
+++ b/resources/nova_neutron_puppet/meta.yaml
@@ -3,6 +3,25 @@ handler: puppet
 puppet_module: nova
 version: 1.0.0
 input:
+    auth_host:
+      schema: str
+      value: 'localhost'
+    auth_port:
+      schema: int
+      value: 35357
+    auth_protocol:
+      schema: str
+      value: 'http'
+    neutron_endpoint_host:
+      schema: str
+      value: 'localhost'
+    neutron_endpoint_port:
+      schema: int
+      value: 9696
+    neutron_endpoint_protocol:
+      schema: str
+      value: 'http'
+
     libvirt_vif_driver:
       schema: str
       value: 'nova.virt.libvirt.vif.LibvirtGenericVIFDriver'
@@ -15,9 +34,6 @@ input:
     neutron_auth_strategy:
       schema: str
       value: 'keystone'
-    neutron_url:
-      schema: str
-      value: 'http://127.0.0.1:9696'
     neutron_url_timeout:
       schema: int
       value: 30
@@ -33,9 +49,6 @@ input:
     neutron_admin_username:
       schema: str
       value: 'neutron'
-    neutron_admin_auth_url:
-      schema: str
-      value: 'http://127.0.0.1:35357/v2.0'
     neutron_ovs_bridge:
       schema: str
       value: 'br-int'
